@@ -6,6 +6,7 @@
 	  come through, the closed pipe will cause the child to quit).
 	- need_to_send_STATS flag in parent. 
 	- reload has its own ipc-listening handler in server_main.
+	- nonblocking writes for server_main; this solved write-blocking race.
 
 24 May 2006: Wouter
 	- unit tests print progress while running to stderr. Included license
